// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template: Home renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimelinePage
    data={
      Object {
        "content": Object {
          "frontmatter": Object {
            "description": "Test",
            "title": "Test",
          },
          "html": "<p>Test</p>",
        },
      }
    }
    pathContext={
      Object {
        "path": "/timeline",
      }
    }
    preview={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SEOTagsComponent
          description="Test"
          path="/timeline"
          title="Test"
        />,
        <section
          className="timeline"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Test</p>",
              }
            }
          />
        </section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "description": "Test",
          "path": "/timeline",
          "title": "Test",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Test</p>",
              }
            }
          />,
          "className": "timeline",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "<p>Test</p>",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SEOTagsComponent
            description="Test"
            path="/timeline"
            title="Test"
          />,
          <section
            className="timeline"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />
          </section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "description": "Test",
            "path": "/timeline",
            "title": "Test",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />,
            "className": "timeline",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "dangerouslySetInnerHTML": Object {
                "__html": "<p>Test</p>",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Template: Home renders preview 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimelinePage
    data={
      Object {
        "content": Object {
          "frontmatter": Object {
            "description": "Test",
            "title": "Test",
          },
          "html": "<p>Test</p>",
        },
      }
    }
    pathContext={
      Object {
        "path": "/timeline",
      }
    }
    preview={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SEOTagsComponent
          description="Test"
          path="/timeline"
          title="Test"
        />,
        <section
          className="timeline"
        >
          <div>
            &lt;p&gt;Test&lt;/p&gt;
          </div>
        </section>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "description": "Test",
          "path": "/timeline",
          "title": "Test",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div>
            &lt;p&gt;Test&lt;/p&gt;
          </div>,
          "className": "timeline",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "<p>Test</p>",
          },
          "ref": null,
          "rendered": "<p>Test</p>",
          "type": "div",
        },
        "type": "section",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SEOTagsComponent
            description="Test"
            path="/timeline"
            title="Test"
          />,
          <section
            className="timeline"
          >
            <div>
              &lt;p&gt;Test&lt;/p&gt;
            </div>
          </section>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "description": "Test",
            "path": "/timeline",
            "title": "Test",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div>
              &lt;p&gt;Test&lt;/p&gt;
            </div>,
            "className": "timeline",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "<p>Test</p>",
            },
            "ref": null,
            "rendered": "<p>Test</p>",
            "type": "div",
          },
          "type": "section",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
